--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -525,30 +525,20 @@ jobs:
           cd $GITHUB_WORKSPACE/device_kernel/
           echo "Applying Re-Kernel patches..."
           bash ../rekernel_project/Integrate/patches.sh
+          
           echo "Fixing: conflicting types for 'frozen_task_group'"
           sed -i 's/frozen_task_group/rekernel_frozen_task_group/g' drivers/rekernel/rekernel.h
-          echo "Fixing: declaration-after-statement in kernel/signal.c"
-          patch -p1 <<'EOF'
-          --- a/kernel/signal.c
-          +++ b/kernel/signal.c
-          @@ -1282,9 +1282,9 @@
-           {
-                  int ret;
-           
-          -       ret = __group_send_sig_info(sig, info, p, pid_type);
-                  struct millet_data data;
-          +       ret = __group_send_sig_info(sig, info, p, pid_type);
-           
-                  if (unlikely(ret && sig_is_ok(sig))) {
-                          data.sig = sig;
-          EOF
 
+          echo "Fixing: declaration-after-statement in kernel/signal.c"
+          line_to_move=$(grep -m 1 "struct millet_data data;" kernel/signal.c)
+          sed -i '/struct millet_data data;/d' kernel/signal.c
+          sed -i '/ret = __group_send_sig_info/i\'"$line_to_move" kernel/signal.c
           echo "Hotfixes applied successfully."
 
           echo "Patches applied successfully."
 
       - name: Patch Kernel of Re:Kernel
-        if: env.REKERNEL_ENABLE == 'true'
+        if: env.SUSFS_ENABLE == 'true' && env.SUSFS_FIXED == 'true'
         run: |
           cd $GITHUB_WORKSPACE/device_kernel/
           PATCH_FILE="/tmp/Patches/Rekernel/rekernel-${{ env.KERNEL_VERSION }}.patch"
@@ -563,7 +553,7 @@ jobs:
           
           
       - name: Fixed Kernel Patch
-        if: env.REKERNEL_ENABLE == 'true'
+        if: env.SUSFS_ENABLE == 'true' && env.SUSFS_FIXED == 'true'
         run: |
           # if need susfs " env.SUSFS_ENABLE == 'true' && env.SUSFS_FIXED == 'true' "
         
