--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -640,7 +640,7 @@ jobs:
           else
             make CC="ccache clang" O=out ARCH=arm64 ${{ env.CUSTOM_CMDS }} ${{ env.EXTRA_CMDS }} ${{ env.GCC_64 }} ${{ env.GCC_32 }} ${{ env.DEFCONFIG_NAME }} vendor/xiaomi/sm8250-common.config
             
-          scripts/kconfig/merge_config.sh -m -O out out/.config vendor/xiaomi/sm8250-common.config
+          scripts/kconfig/merge_config.sh -m -O out out/.config
           if [[ "${{ env.CONFIG }}" == "true" ]]; then
           scripts/config --file out/.config \
             -e KALLSYMS \
