--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       matrix:
         kernel: [1, 2, 3, 4]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       UPLOAD_TO_RELEASE: false
 
@@ -117,9 +117,9 @@ jobs:
           export PATH="$(pwd)/clang/bin:$PATH"
           export ARCH=arm64
           export SUBARCH=ARM64
-          export KBUILD_BUILD_USER="renoroi"
-          export KBUILD_BUILD_HOST="dreamstate"
-          export KBUILD_BUILD_TIMESTAMP="$(TZ=UTC-7 date)"
+          export KBUILD_BUILD_USER="sonako"
+          export KBUILD_BUILD_HOST="yski"
+          export KBUILD_BUILD_TIMESTAMP="$(TZ=UTC-8 date)"
           cd kernel_tree
           make O=out vendor/alioth_defconfig
           make O=out CC=clang -j$(nproc --all) CROSS_COMPILE=aarch64-linux-gnu- LLVM=1 LLVM_IAS=1
