--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -1,4 +1,4 @@
-name: FD-release-alioth-builder
+name: release-alioth-builder-fd
 
 on:
   pull_request:
@@ -21,7 +21,7 @@ on:
         required: false
       CUSTOM_SED:
         description: 'Custom Kernel Version'
-        default: '-FakeDreamer'
+        default: '-Yosaki-Sonako'
         required: false
       COMPILER:
         description: 'default=neutron, write aosp for aosp 20 clang'
@@ -32,8 +32,8 @@ jobs:
   build:
     strategy:
       matrix:
-        kernel: [1, 2, 3, 4]
-    runs-on: ubuntu-22.04
+        kernel: [1, 2]
+    runs-on: ubuntu-latest
     env:
       UPLOAD_TO_RELEASE: false
 
@@ -58,10 +58,8 @@ jobs:
         run: |
           echo "KERNEL_TREE=${{ github.event.inputs.KERNEL_TREE_1 }}" >> $GITHUB_ENV
           case "${{ matrix.kernel }}" in
-            1) echo "KERNEL_TREE_BRANCH=next-main" >> $GITHUB_ENV ;;
-            2) echo "KERNEL_TREE_BRANCH=next-susfs" >> $GITHUB_ENV ;;
-            3) echo "KERNEL_TREE_BRANCH=no-ksu" >> $GITHUB_ENV ;;
-            4) echo "KERNEL_TREE_BRANCH=freesia" >> $GITHUB_ENV ;;
+            1) echo "KERNEL_TREE_BRANCH=no-ksu" >> $GITHUB_ENV ;;
+            2) echo "KERNEL_TREE_BRANCH=freesia" >> $GITHUB_ENV ;;
           esac
          
       - name: Checkout Kernel via PAT
@@ -78,30 +76,24 @@ jobs:
       - name: Kernel Version
         run: |
           cd kernel_tree
-          if [[ "${{ github.event.inputs.CUSTOM_SED }}" != "-FakeDreamer" ]]; then
-            sed -i -e 's/CONFIG_LOCALVERSION="-FakeDreamer"/CONFIG_LOCALVERSION="${{ github.event.inputs.CUSTOM_SED }}"/' arch/arm64/configs/vendor/alioth_defconfig
+          if [[ "${{ github.event.inputs.CUSTOM_SED }}" != "-Yosaki-Sonako" ]]; then
+            sed -i -e 's/CONFIG_LOCALVERSION="-Yosaki-Sonako"/CONFIG_LOCALVERSION="${{ github.event.inputs.CUSTOM_SED }}"/' arch/arm64/configs/vendor/alioth_defconfig
           fi
-      
-      - name: Apply Patches (Skip for Kernel 3)
-        if: matrix.kernel != 3
-        run: |
-          cd kernel_tree
-          bash nextpatch.sh
 
       - name: Change different battery type
-        if: matrix.kernel == 3 || matrix.kernel == 4
+        if: matrix.kernel == 2
         run: |
           cd kernel_tree
           sed -i -e '/qcom,j3s-batt-profile;/d' arch/arm64/boot/dts/vendor/qcom/alioth-sm8250.dtsi
 
       - name: Revert to stock gpufreq
-        if: matrix.kernel == 3 || matrix.kernel == 4
+        if: matrix.kernel == 2
         run: |
           cd kernel_tree
           patch -p1 -f < "0001-stock-gpu-freq.patch"
 
       - name: Apply Modifications (if modified build)
-        if: matrix.kernel == 2 || matrix.kernel == 4
+        if: matrix.kernel == 1
         run: |
           cd kernel_tree
           sed -i -e '/<2553600>,/c\<2553600>;' arch/arm64/boot/dts/vendor/qcom/kona.dtsi
@@ -111,7 +103,20 @@ jobs:
           sed -i -e '/<3187200>;/c\//<3187200>;' arch/arm64/boot/dts/vendor/qcom/kona.dtsi
           sed -i -e 's/qcom,mdss-pan-physical-width-dimension = <70>;/qcom,mdss-pan-physical-width-dimension = <695>;/' arch/arm64/boot/dts/vendor/qcom/dsi-panel-k11a-38-08-0a-dsc-cmd.dtsi
           sed -i -e 's/qcom,mdss-pan-physical-height-dimension = <155>;/qcom,mdss-pan-physical-height-dimension = <1546>;/' arch/arm64/boot/dts/vendor/qcom/dsi-panel-k11a-38-08-0a-dsc-cmd.dtsi
-      
+
+      - name: 3.Add Rksu
+        run: |
+          cd $GITHUB_WORKSPACE/kernel_workspace/android_kernel
+          curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash -s main
+
+      - name: 4.Setup rksu
+        run: |
+          ls
+          echo "进入源码目录"
+          cd $GITHUB_WORKSPACE/kernel_workspace/android_kernel
+          cp $GITHUB_WORKSPACE/kernel_workspace/patches/Patches/* .
+          patch -p1 < non-kprobes.patch
+          
       - name: Build Kernel
         run: |
           export PATH="$(pwd)/clang/bin:$PATH"
@@ -131,10 +136,6 @@ jobs:
             cp out/arch/arm64/boot/Image.gz ../Image.gz
             mv out/arch/arm64/boot/dtbo.img ../alioth-j3s-dtbo-miui.img
             mv out/arch/arm64/boot/dtb.img ../alioth-effcpu-dtb
-          elif [[ "${{ matrix.kernel }}" == 3 ]]; then
-            cp out/arch/arm64/boot/Image.gz ../Image.gz
-            mv out/arch/arm64/boot/dtb.img ../alioth-normal-gpustk-dtb
-            mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-aosp.img
           else
             mv out/arch/arm64/boot/dtb.img ../alioth-effcpu-gpustk-dtb
             mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-miui.img
@@ -142,7 +143,7 @@ jobs:
 
       - name: Upload Kernel Artifacts
         uses: actions/upload-artifact@v4
-        if: matrix.kernel != 4
+        if: matrix.kernel != 2
         with:
           name: kernel-${{ matrix.kernel }}-base
           path: |
@@ -168,27 +169,18 @@ jobs:
 
       - name: Upload Kernel Artifacts
         uses: actions/upload-artifact@v4
-        if: matrix.kernel == 3
-        with:
-          name: kernel-part-${{ matrix.kernel }}-addon
-          path: |
-            alioth-stock-dtbo-aosp.img
-            alioth-normal-gpustk-dtb
-
-      - name: Upload Kernel Artifacts
-        uses: actions/upload-artifact@v4
-        if: matrix.kernel == 4
+        if: matrix.kernel == 1
         with:
           name: kernel-part-${{ matrix.kernel }}-addon
           path: |
             alioth-stock-dtbo-miui.img
             alioth-effcpu-gpustk-dtb
-
+            
   package_anykernel:
     needs: build
     strategy:
       matrix:
-        kernel: [1, 2, 3]
+        kernel: [1, 2]
     runs-on: ubuntu-latest
 
     steps:
@@ -210,18 +202,6 @@ jobs:
           name: kernel-part-2-addon
           path: kernel-part-2-addon
 
-      - name: Download Kernel Build Addon 3
-        uses: actions/download-artifact@v4
-        with:
-          name: kernel-part-3-addon
-          path: kernel-part-3-addon
-
-      - name: Download Kernel Build Addon 4
-        uses: actions/download-artifact@v4
-        with:
-          name: kernel-part-4-addon
-          path: kernel-part-4-addon
-
       - name: Clone AnyKernel3
         run: git clone --recursive --depth=1 ${{ github.event.inputs.ANYKERNEL_URL }} -b main AnyKernel3-${{ matrix.kernel }}
 
@@ -230,8 +210,6 @@ jobs:
           mv kernel-${{ matrix.kernel }}-base/* AnyKernel3-${{ matrix.kernel }}/
           mv kernel-part-1-addon/* AnyKernel3-${{ matrix.kernel }}/
           mv kernel-part-2-addon/* AnyKernel3-${{ matrix.kernel }}/
-          mv kernel-part-3-addon/* AnyKernel3-${{ matrix.kernel }}/
-          mv kernel-part-4-addon/* AnyKernel3-${{ matrix.kernel }}/
 
       - name: Define ZIP Name
         run: |
