--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -31,7 +31,7 @@ on:
         description: 'KernelSU Version'
         required: true
         type: choice
-        default: 'sukisu-ultra'
+        default: 'rksu'
         options:
           - 'sukisu-ultra'
           - 'ksu'
