--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           echo "KERNEL_TREE=${{ github.event.inputs.KERNEL_TREE_1 }}" >> $GITHUB_ENV
           case "${{ matrix.kernel }}" in
-            1) echo "KERNEL_TREE_BRANCH=no-ksu" >> $GITHUB_ENV ;;
+            1) echo "KERNEL_TREE_BRANCH=next-main" >> $GITHUB_ENV ;;
             2) echo "KERNEL_TREE_BRANCH=freesia" >> $GITHUB_ENV ;;
           esac
          
@@ -219,7 +219,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        kernel: [1, 2]
+        kernel: [1]
     runs-on: ubuntu-latest
 
     steps:
