--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -1,12 +1,9 @@
-name: release-alioth-builder-fd
+name: FD-release-alioth-builder
 
 on:
   pull_request:
   workflow_dispatch:
     inputs:
-      BUILD_TITLE:
-        description: 'Custom Build Title'
-        required: false
       KERNEL_TREE_1:
         description: 'Kernel Tree'
         default: 'https://github.com/re-noroi/kernel_sm8250'
@@ -21,29 +18,29 @@ on:
         required: false
       CUSTOM_SED:
         description: 'Custom Kernel Version'
-        default: '-Yosaki-Sonako'
+        default: '-FakeDreamer'
         required: false
       COMPILER:
-        description: 'default=neutron, write aosp for aosp 20 clang'
-        default: 'neutron'
-        required: false
-      kernelsu_version:
-        description: 'KernelSU Version'
+        description: 'Choose compiler'
         required: true
         type: choice
-        default: 'rksu'
         options:
-          - 'sukisu-ultra'
-          - 'ksu'
-          - 'rksu'
-          - 'sukisu'
-          - 'noksu'
+          - neutron
+          - aosp
+        default: neutron
+      LTO_CHOICE:
+        required: true
+        type: choice
+        options:
+          - full_lto
+          - thin_lto
+        default: full_lto
 
 jobs:
   build:
     strategy:
       matrix:
-        kernel: [1, 2]
+        kernel: [1, 2, 3, 4]
     runs-on: ubuntu-latest
     env:
       UPLOAD_TO_RELEASE: false
@@ -69,8 +66,10 @@ jobs:
         run: |
           echo "KERNEL_TREE=${{ github.event.inputs.KERNEL_TREE_1 }}" >> $GITHUB_ENV
           case "${{ matrix.kernel }}" in
-            1) echo "KERNEL_TREE_BRANCH=no-ksu" >> $GITHUB_ENV ;;
-            2) echo "KERNEL_TREE_BRANCH=freesia" >> $GITHUB_ENV ;;
+            1) echo "KERNEL_TREE_BRANCH=next-main" >> $GITHUB_ENV ;;
+            2) echo "KERNEL_TREE_BRANCH=next-susfs" >> $GITHUB_ENV ;;
+            3) echo "KERNEL_TREE_BRANCH=no-ksu" >> $GITHUB_ENV ;;
+            4) echo "KERNEL_TREE_BRANCH=freesia" >> $GITHUB_ENV ;;
           esac
          
       - name: Checkout Kernel via PAT
@@ -87,24 +86,37 @@ jobs:
       - name: Kernel Version
         run: |
           cd kernel_tree
-          if [[ "${{ github.event.inputs.CUSTOM_SED }}" != "-Yosaki-Sonako" ]]; then
+          if [[ "${{ github.event.inputs.CUSTOM_SED }}" != "-FakeDreamer" ]]; then
             sed -i -e 's/CONFIG_LOCALVERSION="-FakeDreamer"/CONFIG_LOCALVERSION="${{ github.event.inputs.CUSTOM_SED }}"/' arch/arm64/configs/vendor/alioth_defconfig
           fi
+      
+      - name: Apply Patches (Skip for Kernel 3)
+        if: matrix.kernel != 3
+        run: |
+          cd kernel_tree
+          bash nextpatch.sh
 
       - name: Change different battery type
-        if: matrix.kernel == 1 || matrix.kernel == 2
+        if: matrix.kernel == 3 || matrix.kernel == 4
         run: |
           cd kernel_tree
           sed -i -e '/qcom,j3s-batt-profile;/d' arch/arm64/boot/dts/vendor/qcom/alioth-sm8250.dtsi
 
       - name: Revert to stock gpufreq
-        if: matrix.kernel == 1 || matrix.kernel == 2
+        if: matrix.kernel == 3 || matrix.kernel == 4
         run: |
           cd kernel_tree
           patch -p1 -f < "0001-stock-gpu-freq.patch"
 
+      - name: Change LTO Type
+        if: ${{ github.event.inputs.LTO_CHOICE == 'thin_lto' }}
+        run: |
+          cd kernel_tree
+          sed -i -e '/# CONFIG_LTO_CLANG_THIN is not set/c\CONFIG_LTO_CLANG_THIN=y;' arch/arm64/configs/vendor/alioth_defconfig
+          sed -i -e '/CONFIG_LTO_CLANG_FULL=y/c\# CONFIG_LTO_CLANG_FULL is not set;' arch/arm64/configs/vendor/alioth_defconfig
+
       - name: Apply Modifications (if modified build)
-        if: matrix.kernel == 2
+        if: matrix.kernel == 2 || matrix.kernel == 4
         run: |
           cd kernel_tree
           sed -i -e '/<2553600>,/c\<2553600>;' arch/arm64/boot/dts/vendor/qcom/kona.dtsi
@@ -114,60 +126,15 @@ jobs:
           sed -i -e '/<3187200>;/c\//<3187200>;' arch/arm64/boot/dts/vendor/qcom/kona.dtsi
           sed -i -e 's/qcom,mdss-pan-physical-width-dimension = <70>;/qcom,mdss-pan-physical-width-dimension = <695>;/' arch/arm64/boot/dts/vendor/qcom/dsi-panel-k11a-38-08-0a-dsc-cmd.dtsi
           sed -i -e 's/qcom,mdss-pan-physical-height-dimension = <155>;/qcom,mdss-pan-physical-height-dimension = <1546>;/' arch/arm64/boot/dts/vendor/qcom/dsi-panel-k11a-38-08-0a-dsc-cmd.dtsi
-
-      - name: Add KernelSU based on selection
-        run: |
-          cd kernel_tree
-          KSU_VERSION="${{ github.event.inputs.kernelsu_version }}"
-          ADDITIONAL="${{ github.event.inputs.additional_function }}"
-          SuSFS_ENABLE=0
-          if [[ "$ADDITIONAL" == "susfs" || "$ADDITIONAL" == "susfs-kpm" ]]; then
-            SuSFS_ENABLE=1
-          fi
-
-          if [ "$KSU_VERSION" == "ksu" ]; then
-            echo "KSU is enabled"
-            if [ "$SuSFS_ENABLE" -eq 1 ]; then
-              echo "::error::Official KernelSU does not support SuSFS. Build failed."
-              exit 1
-            fi
-            curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s v0.9.5
-          elif [ "$KSU_VERSION" == "rksu" ]; then
-            if [ "$SuSFS_ENABLE" -eq 1 ]; then
-              echo "RKSU && SuSFS is enabled"
-              curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash -s susfs-v1.5.5
-            else
-              echo "RKSU is enabled"
-              curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash -s main
-            fi
-          elif [ "$KSU_VERSION" == "sukisu" ]; then
-            if [ "$SuSFS_ENABLE" -eq 1 ]; then
-              echo "SukiSU && SuSFS is enabled"
-              curl -LSs "https://raw.githubusercontent.com/ShirkNeko/KernelSU/main/kernel/setup.sh" | bash -s susfs-dev
-            else
-              echo "SukiSU is enabled"
-              curl -LSs "https://raw.githubusercontent.com/ShirkNeko/KernelSU/main/kernel/setup.sh" | bash -s dev
-            fi
-          elif [ "$KSU_VERSION" == "sukisu-ultra" ]; then
-            if [ "$SuSFS_ENABLE" -eq 1 ]; then
-              echo "SukiSU-Ultra && SuSFS is enabled"
-              curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-main
-            else
-              echo "SukiSU-Ultra is enabled"
-              curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s nongki
-            fi
-          else
-            echo "KernelSU integration is skipped."
-          fi
       
       - name: Build Kernel
         run: |
           export PATH="$(pwd)/clang/bin:$PATH"
           export ARCH=arm64
           export SUBARCH=ARM64
-          export KBUILD_BUILD_USER="sonako"
-          export KBUILD_BUILD_HOST="yski"
-          export KBUILD_BUILD_TIMESTAMP="$(TZ=UTC-8 date)"
+          export KBUILD_BUILD_USER="renoroi"
+          export KBUILD_BUILD_HOST="dreamstate"
+          export KBUILD_BUILD_TIMESTAMP="$(TZ=UTC-7 date)"
           cd kernel_tree
           make O=out vendor/alioth_defconfig
           make O=out CC=clang -j$(nproc --all) CROSS_COMPILE=aarch64-linux-gnu- LLVM=1 LLVM_IAS=1
@@ -179,6 +146,10 @@ jobs:
             cp out/arch/arm64/boot/Image.gz ../Image.gz
             mv out/arch/arm64/boot/dtbo.img ../alioth-j3s-dtbo-miui.img
             mv out/arch/arm64/boot/dtb.img ../alioth-effcpu-dtb
+          elif [[ "${{ matrix.kernel }}" == 3 ]]; then
+            cp out/arch/arm64/boot/Image.gz ../Image.gz
+            mv out/arch/arm64/boot/dtb.img ../alioth-normal-gpustk-dtb
+            mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-aosp.img
           else
             mv out/arch/arm64/boot/dtb.img ../alioth-effcpu-gpustk-dtb
             mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-miui.img
@@ -186,7 +157,7 @@ jobs:
 
       - name: Upload Kernel Artifacts
         uses: actions/upload-artifact@v4
-        if: matrix.kernel != 2
+        if: matrix.kernel != 4
         with:
           name: kernel-${{ matrix.kernel }}-base
           path: |
@@ -209,12 +180,30 @@ jobs:
           path: |
             alioth-j3s-dtbo-miui.img
             alioth-effcpu-dtb
-            
+
+      - name: Upload Kernel Artifacts
+        uses: actions/upload-artifact@v4
+        if: matrix.kernel == 3
+        with:
+          name: kernel-part-${{ matrix.kernel }}-addon
+          path: |
+            alioth-stock-dtbo-aosp.img
+            alioth-normal-gpustk-dtb
+
+      - name: Upload Kernel Artifacts
+        uses: actions/upload-artifact@v4
+        if: matrix.kernel == 4
+        with:
+          name: kernel-part-${{ matrix.kernel }}-addon
+          path: |
+            alioth-stock-dtbo-miui.img
+            alioth-effcpu-gpustk-dtb
+
   package_anykernel:
     needs: build
     strategy:
       matrix:
-        kernel: [1]
+        kernel: [1, 2, 3]
     runs-on: ubuntu-latest
 
     steps:
@@ -235,7 +224,19 @@ jobs:
         with:
           name: kernel-part-2-addon
           path: kernel-part-2-addon
-          
+
+      - name: Download Kernel Build Addon 3
+        uses: actions/download-artifact@v4
+        with:
+          name: kernel-part-3-addon
+          path: kernel-part-3-addon
+
+      - name: Download Kernel Build Addon 4
+        uses: actions/download-artifact@v4
+        with:
+          name: kernel-part-4-addon
+          path: kernel-part-4-addon
+
       - name: Clone AnyKernel3
         run: git clone --recursive --depth=1 ${{ github.event.inputs.ANYKERNEL_URL }} -b main AnyKernel3-${{ matrix.kernel }}
 
@@ -244,34 +245,19 @@ jobs:
           mv kernel-${{ matrix.kernel }}-base/* AnyKernel3-${{ matrix.kernel }}/
           mv kernel-part-1-addon/* AnyKernel3-${{ matrix.kernel }}/
           mv kernel-part-2-addon/* AnyKernel3-${{ matrix.kernel }}/
+          mv kernel-part-3-addon/* AnyKernel3-${{ matrix.kernel }}/
+          mv kernel-part-4-addon/* AnyKernel3-${{ matrix.kernel }}/
 
       - name: Define ZIP Name
         run: |
-          KSU_VERSION="${{ github.event.inputs.kernelsu_version }}"
-          
-          KSU_VERSION="rksu"
           COMPILED_DATE=$(date +%Y%m%d)
-          KSU_ZIP_STR="NoKSU"
-
-          case "$KSU_VERSION" in
-          "ksu")
-          KSU_ZIP_STR="KSU"
-          ;;
-          "rksu")
-          KSU_ZIP_STR="RKSU"
-          ;;
-          "sukisu")
-          KSU_ZIP_STR="SukiSU"
-          ;;
-          "sukisu-ultra")
-          KSU_ZIP_STR="SukiSU-Ultra"
-          ;;
-          esac
-
-          ZIP_NAME="[FD-][${KSU_ZIP_STR}-${{ github.event.inputs.CODENAME }}-${COMPILED_DATE}]"
-          echo "Final ZIP name: ${ZIP_NAME}"
-          echo "ZIP_NAME=${ZIP_NAME}" >> $GITHUB_ENV
-
+          if [[ "${{ matrix.kernel }}" == "1" ]]; then
+            echo "ZIP_NAME=[FD-][next-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
+          elif [[ "${{ matrix.kernel }}" == "2" ]]; then
+            echo "ZIP_NAME=[FD-][susfs-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
+          else
+            echo "ZIP_NAME=[FD-][noksu-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
+          fi
       
       - name: Upload Flashable Kernel Zip
         uses: actions/upload-artifact@v4
