--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -18,7 +18,7 @@ on:
         required: false
       CUSTOM_SED:
         description: 'Custom Kernel Version'
-        default: '-FakeDreamer'
+        default: '-Yski-Sonako'
         required: false
       COMPILER:
         description: 'Choose compiler'
@@ -28,6 +28,17 @@ on:
           - neutron
           - aosp
         default: neutron
+      kernelsu_version:
+        description: 'KernelSU Version'
+        required: true
+        type: choice
+        default: 'rksu'
+        options:
+          - 'sukisu-ultra'
+          - 'ksu'
+          - 'rksu'
+          - 'sukisu'
+          - 'noksu'
       LTO_CHOICE:
         required: true
         type: choice
@@ -91,7 +102,7 @@ jobs:
           fi
       
       - name: Apply Patches (Skip for Kernel 3)
-        if: matrix.kernel != 3
+        if: matrix.kernel != 3 || matrix.kernel ！== 1
         run: |
           cd kernel_tree
           bash nextpatch.sh
@@ -115,6 +126,51 @@ jobs:
           sed -i -e '/# CONFIG_LTO_CLANG_THIN is not set/c\CONFIG_LTO_CLANG_THIN=y;' arch/arm64/configs/vendor/alioth_defconfig
           sed -i -e '/CONFIG_LTO_CLANG_FULL=y/c\# CONFIG_LTO_CLANG_FULL is not set;' arch/arm64/configs/vendor/alioth_defconfig
 
+      - name: Add KernelSU based on selection
+        run: |
+          cd kernel_tree
+          KSU_VERSION="${{ github.event.inputs.kernelsu_version }}"
+          ADDITIONAL="${{ github.event.inputs.additional_function }}"
+          SuSFS_ENABLE=0
+          if [[ "$ADDITIONAL" == "susfs" || "$ADDITIONAL" == "susfs-kpm" ]]; then
+            SuSFS_ENABLE=1
+          fi
+
+          if [ "$KSU_VERSION" == "ksu" ]; then
+            echo "KSU is enabled"
+            if [ "$SuSFS_ENABLE" -eq 1 ]; then
+              echo "::error::Official KernelSU does not support SuSFS. Build failed."
+              exit 1
+            fi
+            curl -LSs "https://raw.githubusercontent.com/YuKongA/KernelSU/main/kernel/setup.sh" | bash -s main
+          elif [ "$KSU_VERSION" == "rksu" ]; then
+            if [ "$SuSFS_ENABLE" -eq 1 ]; then
+              echo "RKSU && SuSFS is enabled"
+              curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash -s susfs-v1.5.5
+            else
+              echo "RKSU is enabled"
+              curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash -s main
+            fi
+          elif [ "$KSU_VERSION" == "sukisu" ]; then
+            if [ "$SuSFS_ENABLE" -eq 1 ]; then
+              echo "SukiSU && SuSFS is enabled"
+              curl -LSs "https://raw.githubusercontent.com/ShirkNeko/KernelSU/main/kernel/setup.sh" | bash -s susfs-dev
+            else
+              echo "SukiSU is enabled"
+              curl -LSs "https://raw.githubusercontent.com/ShirkNeko/KernelSU/main/kernel/setup.sh" | bash -s dev
+            fi
+          elif [ "$KSU_VERSION" == "sukisu-ultra" ]; then
+            if [ "$SuSFS_ENABLE" -eq 1 ]; then
+              echo "SukiSU-Ultra && SuSFS is enabled"
+              curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-main
+            else
+              echo "SukiSU-Ultra is enabled"
+              curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s nongki
+            fi
+          else
+            echo "KernelSU integration is skipped."
+          fi
+          
       - name: Apply Modifications (if modified build)
         if: matrix.kernel == 2 || matrix.kernel == 4
         run: |
@@ -252,7 +308,7 @@ jobs:
         run: |
           COMPILED_DATE=$(date +%Y%m%d)
           if [[ "${{ matrix.kernel }}" == "1" ]]; then
-            echo "ZIP_NAME=[FD-][next-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
+            echo "ZIP_NAME=[FD-][ksu-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
           elif [[ "${{ matrix.kernel }}" == "2" ]]; then
             echo "ZIP_NAME=[FD-][susfs-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
           else
