--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -101,8 +101,8 @@ jobs:
             sed -i -e 's/CONFIG_LOCALVERSION="-FakeDreamer"/CONFIG_LOCALVERSION="${{ github.event.inputs.CUSTOM_SED }}"/' arch/arm64/configs/vendor/alioth_defconfig
           fi
       
-      - name: Apply Patches (Skip for Kernel 3)
-        if: matrix.kernel != 3 || matrix.kernel ！== 1
+      - name: Apply Patches (Skip for Kernel 1 or 3)
+        if: matrix.kernel != 1 && matrix.kernel != 3
         run: |
           cd kernel_tree
           bash nextpatch.sh
