--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -27,6 +27,7 @@ on:
         options:
           - neutron
           - aosp
+          - aosp-21
         default: neutron
       kernelsu_version:
         description: 'KernelSU Version'
@@ -68,6 +69,7 @@ jobs:
             tar -xf clang.tar.gz -C clang
           elif [[ "${{ github.event.inputs.COMPILER }}" == "aosp-21" ]]; then
             wget https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/603a89415bbb04dff8bc577b95534479ec13fdc5/clang-r574158.tar.gz -O clang.tar.gz
+            mkdir clang
             tar -xf clang.tar.gz -C clang
           else
             wget https://github.com/Neutron-Toolchains/clang-build-catalogue/releases/download/10032024/neutron-clang-10032024.tar.zst -O clang.tar.zst
