--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -40,6 +40,16 @@ on:
           - 'rksu'
           - 'sukisu'
           - 'noksu'
+      additional_function:
+        description: 'Additional Functions'
+        required: true
+        type: choice
+        default: 'no'
+        options:
+          - 'no'
+          - 'susfs-kpm'
+          - 'susfs'
+          - 'kpm'
       LTO_CHOICE:
         required: true
         type: choice
@@ -131,6 +141,26 @@ jobs:
           sed -i -e '/# CONFIG_LTO_CLANG_THIN is not set/c\CONFIG_LTO_CLANG_THIN=y;' arch/arm64/configs/vendor/alioth_defconfig
           sed -i -e '/CONFIG_LTO_CLANG_FULL=y/c\# CONFIG_LTO_CLANG_FULL is not set;' arch/arm64/configs/vendor/alioth_defconfig
 
+
+      - name: set kernel-additional
+         if： matrix.kernel != 3
+         run： |
+          cd kernel_tree
+          ADDITIONAL="${{ github.event.inputs.additional_function }}"
+         if [ "$ADDITIONAL" == "susfs-kpm" ]; then
+           SuSFS_ENABLE=1
+           KPM_ENABLE=1
+           echo "Enable SuSFS and KPM"
+         elif [ "$ADDITIONAL" == "susfs" ]; then
+            SuSFS_ENABLE=1
+            echo "Enable SuSFS"
+         elif [ "$ADDITIONAL" == "kpm" ]; then
+            KPM_ENABLE=1
+            echo "Enable KPM"
+         else 
+             echo "The additional function is not enabled"
+         fi
+        
       - name: Add KernelSU based on selection
         if: matrix.kernel != 3
         run: |
