--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -67,7 +67,7 @@ jobs:
   build:
     strategy:
       matrix:
-        kernel: [1, 2, 3]
+        kernel: [1, 2, 3, 4]
     runs-on: ubuntu-latest
     env:
       UPLOAD_TO_RELEASE: false
@@ -144,13 +144,13 @@ jobs:
           echo "Re:Kernel Patched."
 
       - name: Change different battery type
-        if: matrix.kernel == 3
+        if: matrix.kernel == 3 || matrix.kernel == 4
         run: |
           cd kernel_tree
           sed -i -e '/qcom,j3s-batt-profile;/d' arch/arm64/boot/dts/vendor/qcom/alioth-sm8250.dtsi
 
       - name: Revert to stock gpufreq
-        if: matrix.kernel == 3
+        if: matrix.kernel == 3 || matrix.kernel == 4
         run: |
           cd kernel_tree
           patch -p1 -f < "0001-stock-gpu-freq.patch"
@@ -185,7 +185,7 @@ jobs:
           fi
           
       - name: Apply Modifications (if modified build)
-        if: matrix.kernel == 2
+        if: matrix.kernel == 2 || matrix.kernel == 4
         run: |
           cd kernel_tree
           sed -i -e '/<2553600>,/c\<2553600>;' arch/arm64/boot/dts/vendor/qcom/kona.dtsi
@@ -285,6 +285,7 @@ jobs:
           
       - name: Upload Kernel Artifacts
         uses: actions/upload-artifact@v4
+        if: matrix.kernel != 4
         with:
           name: kernel-${{ matrix.kernel }}-base
           path: |
@@ -316,6 +317,15 @@ jobs:
           path: |
             alioth-stock-dtbo-aosp.img
             alioth-normal-gpustk-dtb
+
+      - name: Upload Kernel Artifacts
+        uses: actions/upload-artifact@v4
+        if: matrix.kernel == 4
+        with:
+          name: kernel-part-${{ matrix.kernel }}-addon
+          path: |
+            alioth-stock-dtbo-miui.img
+            alioth-effcpu-gpustk-dtb
 
   package_anykernel:
     needs: build
@@ -349,6 +359,12 @@ jobs:
           name: kernel-part-3-addon
           path: kernel-part-3-addon
 
+      - name: Download Kernel Build Addon 4
+        uses: actions/download-artifact@v4
+        with:
+          name: kernel-part-4-addon
+          path: kernel-part-4-addon
+          
       - name: Clone AnyKernel3
         run: git clone --recursive --depth=1 ${{ github.event.inputs.ANYKERNEL_URL }} -b main AnyKernel3-${{ matrix.kernel }}
 
@@ -358,6 +374,7 @@ jobs:
           mv kernel-part-1-addon/* AnyKernel3-${{ matrix.kernel }}/
           mv kernel-part-2-addon/* AnyKernel3-${{ matrix.kernel }}/
           mv kernel-part-3-addon/* AnyKernel3-${{ matrix.kernel }}/
+          mv kernel-part-4-addon/* AnyKernel3-${{ matrix.kernel }}/
 
       - name: Define ZIP Name
         run: |
