--- a/.github/workflows/alioth-release-tester.yml
+++ b/.github/workflows/alioth-release-tester.yml
@@ -59,7 +59,7 @@ on:
           - thin_lto
         default: full_lto
       PATCH_SKIP:
-        description: 'select yes if for stable branch'
+        description: 'SKIP KSUN (select yes if for stable branch)'
         required: true
         type: choice
         options:
@@ -119,7 +119,7 @@ jobs:
           fi
       
       - name: Apply Patches
-        if: matrix.kernel != 1 && matrix.kernel != 3
+        if: ${{ github.event.inputs.PATCH_SKIP == 'no' }}
         run: |
           cd kernel_tree
           bash nextpatch.sh
